shows nearest discount from front page